welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: ';' expected but '(' found.
  var q : getMondeLargeur()
                         ^Array2:6: error: ';' expected but '(' found.
  var w : getMondeHauteur()
                         ^